# adb-gui

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: release.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/spec/guides/: index.md  product-planning-style-guide.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/06-26-adb-gui-app/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-01-logcat-device-enhancements/: implement.md  task.json
.windsurf/workflows/: trellis-continue.md  trellis-start.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: README.txt
src-tauri/src/: adb.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  app_icon.rs  deeplink.rs  device.rs  device_info.rs  keys.rs  logcat.rs  mod.rs  packages.rs  screenshot.rs  wifi.rs
src/components/: ActivityMonitor.tsx  AppManager.tsx  DeepLinkTool.tsx  DeviceInfoPanel.tsx  DeviceSelector.tsx  Logcat.tsx  LogcatViewer.tsx  PackageManager.tsx  Screenshot.tsx  ToastBar.tsx  UpdateChecker.tsx  WifiConnect.tsx
src/lib/: device.ts  tauri.ts
src/store/: device.ts  feedback.ts  theme.ts
(+12 files in other folders)
